--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,30 +1,34 @@
 <main>
   <div class="position-relative">
     <!-- Hero for FREE version -->
-    <section class="section section-sm section-hero section-shaped" >
+    <section class="section section-hero section-shaped" style="padding: 0">
 
       <div class="shape shape-style-1 shape-dark">
       </div>
       <div class="container shape-container d-flex align-items-center" style="margin-bottom: 50px;">
         <div class="col px-0">
-          <div class="row align-items-center justify-content-center">
-            <div class="col-lg-6 text-center" style="margin-top: 50px;">
-              <img src="./assets/img/bonksters.png" style="width: 300px; height: 200px; aspect-ratio: none;" class="img-fluid">
+          <div class="row align-items-center justify-content-center" style="padding:0">
+            <div class="col-lg-12 text-center" >
+              <img src="./assets/img/bonksters.png" style="width: 400px; height: 200px; aspect-ratio: none;" class="img-fluid">
 
-              <div class="col-12-lg">
-                <a href="https://twitter.com/BonkstersNFT" class="btn socials" style="font-family: myFirstFont; border-radius: 5em; box-shadow: 0px 0px 40px 5px rgb(252,205,8)">
+              <div class="col-lg-12" style="display: block;">
+                <p class="lead text-white" style="font-family: myFirstFont; font-size: 30px; font-weight: bold; display: inline-block;">
+                  A collection of 2,500 Bonksters coming to conquer solana ecosystem and EMBRACING <span style="font-family: myFirstFont; font-size: 30px; font-weight: bold; color:#f47407; display: inline-block;">&nbsp;$BONK.</span> 
+                </p> 
+                
+              </div>
+              <div class="col-12-lg" style="margin-top: 30px;">
+                <a href="https://twitter.com/BonkstersNFT" class="btn socials" style="font-family: myFirstFont; border-radius: 5em; box-shadow: 0px 0px 40px 5px #f47407 ">
                   <img src="https://cdn-icons-png.flaticon.com/512/3670/3670211.png" style="width: 24px; margin-right: 5px;" class="img-fluid">
                   <a class="nav-link-inner--text">Twitter</a>
                 </a>
   
-                <a href="https://discord.gg/DnQubshx" class="btn socials" style="font-family: myFirstFont; border-radius: 5em; box-shadow: 0px 0px 40px 5px rgb(252,205,8)">
+                <a href="https://discord.gg/DnQubshx" class="btn socials" style="font-family: myFirstFont; border-radius: 5em; box-shadow: 0px 0px 40px 5px #f47407 ">
                   <img src="https://cdn-icons-png.flaticon.com/512/3670/3670157.png" style="width: 24px; margin-right: 5px;" class="img-fluid">
                   <a class="nav-link-inner--text">Discord</a>
                 </a>
               </div>
 
-              <p class="lead text-white" style="font-family: myFirstFont; font-size: 20px; font-weight: bold;">A collection of 2,500 Bonksters coming to conquer solana ecosystem and embrace $BONK . 
-              </p>
             </div>
           </div>
         </div>
@@ -36,7 +40,7 @@
     
   </div>
 
-  <section class="section section-sm section-hero section-shaped">
+  <section class="section section-shaped" style="padding: 0px;">
 
     <div class="shape shape-style-1 shape-dark">
     </div>
@@ -44,32 +48,85 @@
     <div class="container pb-100" >
       <div class="row row-grid mt-5 card1" style="padding: 10px;">
         <div class="col-lg-12" style="margin: 20px;">
-          <h5 class="mt-3" style="text-align: center; font-family: myFirstFont; font-size: 25px; font-weight: bold; color: rgb(252,205,8);">Mint Infos</h5>
+          <h5 class="mt-3" style="text-align: center; font-family: myFirstFont; font-size: 25px; font-weight: bold; color: #f47407">Mint Details</h5>
         </div>
-          <div class="col-lg-5 card1-ws">
-            <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: rgb(252,205,8);">
-              Phase 1: WL Token Mint 
-              <a class="btn socials" style="margin-left: 5px; top: 5px; right: 5px; position: absolute" (click)="tokenModal()">
+        <div class="col-lg-6" style="padding: 10px;">
+          <div class="card1-ws" style="padding: 5px;">
+            
+            <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: #f47407;">
+              Phase 1: Free Mint Token 
+              <a class="btn socials" style="margin-left: 5px; top: 15px; right: 15px; position: absolute" (click)="tokenModal()">
                 <img src="./assets/img/token.png" style="width: 24px;" class="img-fluid">
-                <a class="nav-link-inner--text" style="font-family: myFirstFont; font-size: 10px">Token Infos</a>
+                <a class="nav-link-inner--text" style="font-family: myFirstFont; font-size: 10px">Token Details</a>
               </a>
             </h3> 
               <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Price: Free</p>
               <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Date: TBA</p>
           </div>
-          <div class="col-lg-2"></div>
-          <div class="col-lg-5 card1-ws">
-            <h3 class="mt-3" style="font-family: myFirstFont;; font-size: 20px; color: rgb(252,205,8);">Phase 2: Public Mint </h3>
-              <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Price: TBA</p>
-              <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Date: TBA</p>
+        </div>
+          
+          <div class="col-lg-6" style="padding: 10px;">
+            <div class="card1-ws" style="padding: 5px;">
+              <h3 class="mt-3" style="font-family: myFirstFont;; font-size: 20px; color: #f47407 ;">Phase 2: Public Mint </h3>
+                <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Price: TBA</p>
+                <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Date: TBA</p>
+            </div>
+          </div>
+          
+      </div>
+      
+    </div>
+  </section>
+
+  <section class="section section-shaped" style="padding: 0px;">
+
+    <div class="shape shape-style-1 shape-dark">
+    </div>
+
+    <div class="container pb-100" >
+      <div class="row row-grid mt-5 card1" style="padding: 10px;">
+        <div class="col-lg-12" style="margin: 20px;">
+          <h5 class="mt-3" style="text-align: center; font-family: myFirstFont; font-size: 25px; font-weight: bold; color: #f47407">Coins Details</h5>
+        </div>
+        
+          <div class="col-lg-4" style="padding: 5px;">
+            <div class="card1-ws" style="color: #f4cd08;">
+              <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: #f4cd08; text-align: center;">
+                <img src="./assets/img/token.png" style="width: 64px;" class="img-fluid">
+                GOLD
+              </h3> 
+                <p class="mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Supply: 375</p>
+                <p class="mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Multiplier: 3x</p>
+            </div>
+          </div>
+          
+          <div class="col-lg-4" style="padding: 5px;">
+            <div class="card1-ws" style="color: #808a8d;">
+              <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: #808a8d; text-align: center;">
+                <img src="./assets/img/2.png" style="width: 64px;" class="img-fluid">
+                SILVER
+              </h3> 
+                <p class="mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Supply: 750</p>
+                <p class="mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Multiplier: 2x</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4" style="padding: 5px;">
+            <div class="card1-ws" style="color: #793536;">
+              <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: #793536; text-align: center;">
+                <img src="./assets/img/1.png" style="width: 64px;" class="img-fluid">
+                BRONZE
+              </h3> 
+                <p class="mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Supply: 1375</p>
+                <p class="mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont;; text-align: left;">Multiplier: 1x</p>
+            </div>
           </div>
       </div>
       
     </div>
   </section>
 
-
-  <section class="section section-sm section-hero section-shaped">
+  <section class="section section-shaped" style="padding: 0px;">
 
     <div class="shape shape-style-1 shape-dark">
     </div>
@@ -77,41 +134,56 @@
     <div class="container pb-100" >
       <div class="row row-grid mt-5 card1" style="padding: 10px;">
         <div class="col-lg-12" style="margin: 20px;">
-          <h5 class="mt-3" style="text-align: center; font-family: myFirstFont;; font-size: 25px; font-weight: bold; color: rgb(252,205,8);">Roadmap - PHASE 1 -</h5>
+          <h5 class="mt-3" style="text-align: center; font-family: myFirstFont;; font-size: 25px; font-weight: bold; color: #f47407;">Roadmap - PHASE 1 -</h5>
         </div>
-          <div class="col-lg-5 card1-ws">
-            <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: rgb(252,205,8);">
-              <a class="nav-link-inner--text" style="background-color: rgb(252, 114, 8); border-radius: 5em; color: white; padding: 5px;">1</a> BONK Bank
-            </h3> 
-              <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont; text-align: left;">
-                Holders will be able to claim a daily $BONK reward based on the amount and variation of NFTs held.
-              </p>
+
+          <div class="col-lg-6" style="padding: 15px;">
+            <div class="col-lg-12 card1-ws" style="position: relative;
+            height: auto;
+            min-height: 100% !important;">
+              <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: #f47407;">
+                <a class="nav-link-inner--text" style="background-color: rgb(252, 114, 8); border-radius: 5em; color: white; padding: 5px;">1</a> BONK Bank
+              </h3> 
+                <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont; text-align: left;">
+                  Holders will be able to claim a daily $BONK reward based on the amount and variation of NFTs held.
+                </p>
+            </div>
           </div>
-          <div class="col-lg-2"></div>
-          <div class="col-lg-5 card1-ws">
-            <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: rgb(252,205,8);">
-              <a class="nav-link-inner--text" style="background-color: rgb(252, 114, 8); border-radius: 5em; color: white; padding: 5px;">2</a> Raid2Earn Platform
-            </h3>
-            <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont; text-align: left;">
-                Holders will be able to earn $BONK for raiding Twitter posts. The reward will be determined by the number and variation of NFTs held.
-            </p>
-          </div>
-          <div class="col-lg-5 card1-ws" style="margin-top: 10px;">
-            <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: rgb(252,205,8);">
-              <a class="nav-link-inner--text" style="background-color: rgb(252, 114, 8); border-radius: 5em; color: white; padding: 5px;">3</a> Raiders Leaderboard
-            </h3> 
+          <div class="col-lg-6" style="padding: 15px;">
+            <div class="col-lg-12 card1-ws" style="position: relative;
+            height: auto;
+            min-height: 100% !important;">
+              <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: #f47407 ;">
+                <a class="nav-link-inner--text" style="background-color: rgb(252, 114, 8); border-radius: 5em; color: white; padding: 5px;">2</a> Raid2Earn Platform
+              </h3>
               <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont; text-align: left;">
-                Our holders will earn points for raiding, engaging in our discord (messages, announcement reactions, and so on), and purchasing NFTs from our collection. Each month, the top three will receive prizes such as NFTs or $BONK.
+                  Holders will be able to earn $BONK for raiding Twitter posts. The reward will be determined by the number and variation of NFTs held.
               </p>
+            </div>
           </div>
-          <div class="col-lg-2" style="margin-top: 10px;"></div>
-          <div class="col-lg-5 card1-ws" style="margin-top: 10px;">
-            <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: rgb(252,205,8);">
-              <a class="nav-link-inner--text" style="background-color: rgb(252, 114, 8); border-radius: 5em; color: white; padding: 5px;">4</a> Bonksters HUB
-            </h3>
-              <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont; text-align: left;">
-                Other projects can use our Raid2Earn platform to create twitter posts to raid, and only their holders and bonksters holders can benefit from raiding and taking rewards.
-              </p>
+          <div class="col-lg-6" style="padding: 15px;">
+            <div class="col-lg-12 card1-ws" style="position: relative;
+            height: auto;
+            min-height: 100% !important;">
+              <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: #f47407 ;">
+                <a class="nav-link-inner--text" style="background-color: rgb(252, 114, 8); border-radius: 5em; color: white; padding: 5px;">3</a> Raiders Leaderboard
+              </h3> 
+                <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont; text-align: left;">
+                  Our holders will earn points for raiding, engaging in our discord (messages, announcement reactions, and so on), and purchasing NFTs from our collection. Each month, the top three will receive prizes such as NFTs or $BONK.
+                </p>
+            </div>
+          </div>
+          <div class="col-lg-6" style="padding: 15px;">
+            <div class="col-lg-12 card1-ws" style="position: relative;
+            height: auto;
+            min-height: 100% !important;">
+              <h3 class="mt-3" style="font-family: myFirstFont; font-size: 20px; color: #f47407 ;">
+                <a class="nav-link-inner--text" style="background-color: rgb(252, 114, 8); border-radius: 5em; color: white; padding: 5px;">4</a> Bonksters HUB
+              </h3>
+                <p class="text-white mt-3" style="top: 0px; position: relative; margin-left: 20px; font-family: myFirstFont; text-align: left;">
+                  Other projects can use our Raid2Earn platform to create twitter posts to raid, and only their holders and bonksters holders can benefit from raiding and taking rewards.
+                </p>
+            </div>
           </div>
       </div>
       
