--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -104,9 +104,9 @@ p {
 
 
 .card1 {
-  border:1px solid rgb(252,205,8);
+  border:1px solid #f47407 ;
   border-radius: 2em;
-  box-shadow: 0px 0px 40px 5px rgb(252,205,8)
+  box-shadow: 0px 0px 40px 5px #f47407;
     /*border-color: rgb(252,205,8);
     background-color: #f8ac03;
     border-width: 2px;
@@ -263,19 +263,19 @@ p {
 
   .socials {
     background-color: transparent;
-    border-color: rgb(252,205,8);
+    border-color: #f47407 ;
     border-radius: 5em;
-    color: rgb(252,205,8);
+    color: #f47407 ;
     border-width: 1px;
   }
 
   .socials:hover {
-    background-color: #f8ac03;
+    background-color: #f47407 ;
     color: white;
   }
 
   .card1-ws {
-    border:1px solid rgb(252,205,8);
+    border:1px solid #f47407;
     border-radius: 2em;
       /*border-color: rgb(252,205,8);
       background-color: #f8ac03;
