--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="row row-grid align-items-center" [ngClass]="{'my-md': getPath()!=='/user-profile' && getPath()!=='/register' && getPath()!=='/login', 'mb-5':getPath()==='/user-profile' || getPath()==='/register' || getPath()==='/login'}">
       <div class="col-lg-6">
-        <h3 class="text-white font-weight-light mb-2" style="font-family: 'Manrope';">Thank you for supporting us!</h3>
+        <h3 class="text-white font-weight-light mb-2" style="font-family: myFirstFont;">Thank you for supporting us!</h3>
       </div>
       <div class="col-lg-6 text-lg-center btn-wrapper">
         <!--<a target="_blank" href="#" class="btn btn-neutral btn-icon-only btn-twitter btn-round btn-lg" ngbTooltip="Follow us">
@@ -39,7 +39,7 @@
       <div class="col-md-6">
         <div class="copyright text-white" style="font-family: 'Manrope';">
           <!--&copy; {{test | date: 'yyyy'}}-->
-          <a href="#" target="_blank" style="font-family: 'Manrope';">Bonksters</a>.
+          <a href="#" target="_blank" style="font-family: myFirstFont;">Bonksters</a>.
         </div>
       </div>
       <div class="col-md-6">
