--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,13 +11,13 @@
             <div class="col-lg-12 text-center" >
               <img src="./assets/img/bonksters.png" style="width: 400px; height: 200px; aspect-ratio: none;" class="img-fluid">
 
-              <div class="col-lg-12" style="display: block;">
-                <p class="lead text-white" style="font-family: myFirstFont; font-size: 30px; font-weight: bold; display: inline-block;">
-                  A collection of 2,500 Bonksters coming to conquer solana ecosystem and EMBRACING <span style="font-family: myFirstFont; font-size: 30px; font-weight: bold; color:#f47407; display: inline-block;">&nbsp;$BONK.</span> 
+              <div class="col-lg-12" style="text-align: center;">
+                <p class="lead text-white" style="text-align: center; font-family: myFirstFont; font-size: 40px; font-weight: bold;">
+                  EMBRACING<span style="color: #f47407; position: relative;">&nbsp;$BONK.</span> 
                 </p> 
                 
               </div>
-              <div class="col-12-lg" style="margin-top: 30px;">
+              <div class="col-12-lg" style="margin-top: 60px;">
                 <a href="https://twitter.com/BonkstersNFT" class="btn socials" style="font-family: myFirstFont; border-radius: 5em; box-shadow: 0px 0px 40px 5px #f47407 ">
                   <img src="https://cdn-icons-png.flaticon.com/512/3670/3670211.png" style="width: 24px; margin-right: 5px;" class="img-fluid">
                   <a class="nav-link-inner--text">Twitter</a>
