--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,5 @@
 <main class="profile-page">
+
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <div *ngIf="userFindLoading" class="loader" style="top: 200px;">
     <div class="inner one"></div>
@@ -6,12 +7,19 @@
     <div class="inner three"></div>
   </div>
 
-
   <div class="position-relative" style="margin-top: 100px;">
     <section class="section section-sm section-shaped pb-300">
       <div class="shape shape-style-1 shape-dark">
       </div>
 
+      <h2 class="mb-4">
+        Wallet details ({{ walletName$ | async }} -
+        <ng-container *ngIf="ready$ | async">(READY)</ng-container>)
+      </h2>
+      <div class="mb-4">
+        <hd-wallet-multi-button style="background-color: white;"></hd-wallet-multi-button>
+      </div>
+      
       <div class="container" style=" margin-bottom: 10px;">
         <div class="container d-flex" style="padding-top: 60px; border: 1px #f47407 solid; padding: 0; border-radius: 2em;">
           <div class="col-lg-12" style="text-align: center; margin-top: 20px; padding: 0;">
